--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i');
 
 @media screen and (max-width: 500px) {
   div { width:70%; }
@@ -29,12 +30,21 @@ body {
   right: 3%;
 }
 
-.nav h1 {
-  color: white;
-  font-size: 19px;
+.nav a #alternates {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 17px;
   style: italic;
   font-style: italic;
-  font-weight: 900;
+  font-weight: 700;
+  margin-bottom: 5px
+}
+
+.nav h1 {
+  color: white;
+  font-size: 17px;
+  style: italic;
+  font-style: italic;
+  font-weight: 700;
   margin-bottom: 5px;
 }
 
