--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   right: 3%;
 }
 
-.nav #alternates {
+#alternates {
   font-family: 'Nunito Sans', sans-serif;
   font-size: 17px;
   style: italic;
