--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 #alternates {
+  color: rgb(255,255,255);
   font-family: 'Nunito Sans', sans-serif;
   font-size: 17px;
   style: italic;
